Performance tests: emulate IDEA VM options